@@ -4,31 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>redstoneapi</artifactId>
-        <groupId>net.redstonecraft</groupId>
+        <groupId>net.redstonecraft.redstoneapi</groupId>
         <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webserver</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
-            <groupId>net.redstonecraft</groupId>
+            <groupId>net.redstonecraft.redstoneapi</groupId>
             <artifactId>core</artifactId>
             <version>2.0</version>
             <scope>compile</scope>
